# sentinel

./: .gitignore  CONTRIBUTING.md  Makefile  README.md  go.mod  go.sum  sentinel.dev.yaml  sentinel.yaml
.github/workflows/: ci.yml
cmd/sentinel-agent/: main.go
cmd/sentinel-api/: config.go  main.go
cmd/sentinel-chain-app/: main.go
cmd/sentinelctl/: main.go
contracts/: openapi.yaml
contracts/protobuf/: packet.proto
deploy/compose/: Dockerfile.agent  Dockerfile.api  Dockerfile.chain-app  Dockerfile.sentinelctl  docker-compose.yml  otel-config.yaml
deploy/k8s/: config.yaml  sentinel-agent.yaml  sentinel-api.yaml  sentinel-chain-app.yaml
docs/runbooks/: 01-installation.md  02-incident-rewind.md  03-policy-update.md  04-app-integration.md
examples/anthropic-ai-lane/: main.py
examples/go-http-app/: main.go
examples/node-http-app/: index.js
examples/openai-compatible-ai-lane/: main.py
examples/python-fastapi-app/: main.py
internal/api/: handlers.go  handlers_test.go
internal/causalgraph/: graph.go  graph_test.go
internal/core/: app_registry.go  decision.go  packet.go  packet_test.go  receipt.go
internal/evidence/: archive_sink.go  archiver.go  evidence_test.go  export.go  retention.go  rewind.go  segments.go
internal/identity/: api_keys.go  identity.go  oidc.go  spiffe.go
internal/ledger/: anchor_queue.go  anchor_queue_ha_test.go  besu.go  cometbft.go  immudb.go  ledger_test.go  receipts.go  verifier.go  witness.go  writer.go  (+1 more)
scripts/: ci.sh
sdk/python/: README.md  pyproject.toml
sdk/python/src/sentinel_sdk/: __init__.py  client.py
(+63 files in other folders)
